extends Control

# --- é…ç½®åŒºåŸŸ ---
# åœ¨è¿™é‡Œå¡«å…¥ä½ ç¬¬ä¸€å…³åœºæ™¯çš„è·¯å¾„
# ä½ ä¹Ÿå¯ä»¥åœ¨ç¼–è¾‘å™¨å³ä¾§å±žæ€§é¢æ¿é‡Œç›´æŽ¥æ‹–æ‹½åœºæ™¯æ–‡ä»¶è¿›æ¥
@export_file("*.tscn") var game_scene_path: String = "res://Scenes/Prefabs/main.tscn" 

func _ready():
	# (å¯é€‰) æ¸¸æˆä¸€å¼€å§‹æŠŠç„¦ç‚¹ç»™â€œå¼€å§‹æ¸¸æˆâ€æŒ‰é’®ï¼Œæ–¹ä¾¿é”®ç›˜æ“ä½œ
	# å¦‚æžœä½ çš„æŒ‰é’®åå­—ä¸ä¸€æ ·ï¼Œè®°å¾—æ”¹ä¸‹é¢è¿™ä¸€è¡Œ
	if has_node("MenuButtons/HostGameBtn"):
		$MenuButtons/HostGameBtn.grab_focus()

# --- ä¿¡å·è¿žæŽ¥å‡½æ•° ---

# è¿žæŽ¥ç»™ "PLAY GAME" æŒ‰é’®
func _on_play_pressed():
	print("ðŸ”´ æŒ‰é’®è¢«ç‚¹å‡»äº†ï¼")
	if game_scene_path == "":
		print("âŒ é”™è¯¯ï¼šä½ è¿˜æ²¡è®¾ç½®æ¸¸æˆåœºæ™¯çš„è·¯å¾„ï¼")
		return
	
	# åˆ‡æ¢åœºæ™¯
	get_tree().change_scene_to_file(game_scene_path)

# è¿žæŽ¥ç»™ "QUIT" æŒ‰é’®
func _on_quit_pressed():
	print("ðŸ‘‹ æ­£åœ¨é€€å‡ºæ¸¸æˆ...")
	get_tree().quit()


func _on_host_game_btn_pressed() -> void:
	pass # Replace with function body.


func _on_host_game_btn_2_pressed() -> void:
	pass # Replace with function body.
